# libMobility

./: .git-blame-ignore-revs  .gitignore  .gitmodules  .readthedocs.yaml  CMakeLists.txt  LICENSE  Makefile  README.md  environment.yml  setup.py  test.py
.github/workflows/: ci.yml  conda.yaml  format-python.yml  format.yml  optional-deps.yml  test-conda.yml
conda/: build.sh
cpp/: CMakeLists.txt  Makefile  README.md  example.cpp
devtools/conda-build/: README.md  build.sh  meta.yaml
devtools/conda-envs/: build_env.yaml
docs/: CMakeLists.txt
docs/source/: api.rst  conf.py  index.rst  installation.rst  new-solver.rst  solvers.rst  usage.rst
docs/source/extensions/: customsig.py
examples/: example.py
examples/cpp/: CMakeLists.txt  README.md  example.cpp  example.cu  example_gpu.cu
examples/python/: example.py
include/MobilityInterface/: MobilityInterface.h  README.md  allocator.h  container.h  defines.h  lanczos.h  python_tensor.h  pythonify.h  random_finite_differences.h  tensor.h
include/lanczos/: LanczosAlgorithm.cu  LanczosAlgorithm.h  algebra.h  lanczos.h
include/lanczos/utils/: MatrixDot.h  cublasDebug.h  cuda_lib_defines.h  debugTools.h  defines.h  device_blas.h  device_container.h  lapack_and_blas_defines.h
include/memory/: allocator.h  container.h  python_tensor.h
python/: README.md  example.py  libMobility.py
solvers/: CMakeLists.txt  __init__.py
solvers/DPStokes/: CMakeLists.txt  Makefile  README.md  mobility.h  python_wrapper.cpp  python_wrapper.cu  uammd_interface.h  uammd_wrapper.cu
solvers/DPStokes/DPStokes/: Makefile  README.md  uammd_interface.h  uammd_python.cpp  uammd_wrapper.cu
solvers/DPStokes/extra/: README.md  dpstokes_parameters.cpp  dpstokes_parameters.h  polyFits.h  poly_fits.h  uammd_interface.h  uammd_wrapper.cu
solvers/NBody/: CMakeLists.txt  Makefile  README.md  example.py  mobility.h  python_wrapper.cpp  python_wrapper.cu  test.py
solvers/NBody/extra/: NbodyRPY.cu  allocator.h  hydrodynamicKernels.cuh  interface.h  python_wrapper.cpp  vector.cuh
solvers/NBody_wall/: Makefile  mobility.h  python_wrapper.cpp
solvers/PSE/: CMakeLists.txt  Makefile  README.md  example.py  mobility.h  python_wrapper.cpp  python_wrapper.cu  test.py
solvers/PSE/extra/: uammd_interface.h  uammd_wrapper.cu
solvers/SelfMobility/: CMakeLists.txt  Makefile  mobility.h  python_wrapper.cpp  python_wrapper.cu  selfmobility.cu
solvers/nbody/: Makefile  example.py  mobility.h  python_wrapper.cpp  test.py
solvers/pse/: Makefile  example.py  mobility.h  python_wrapper.cpp
tests/: test_array_origins.py  test_dpstokes.py  test_fluctuation_dissipation.py  test_initialization.py  test_interface.py  test_mobility_matrix.py  test_precision.py  test_thermal_drift.py  test_wall_mobility.py  utils.py
tests/cpp/: CMakeLists.txt  test_alloc.cu
tests/ref/: pair_mobility_bw_ref_noimg.mat  pair_mobility_bw_ref_noimg_offset_x.npz  pair_mobility_bw_ref_noimg_offset_y.npz  pair_mobility_bw_torque.mat  pair_mobility_bw_w4.mat  pair_mobility_bw_w4.npz  pair_mobility_bw_w4_gpu.mat  pair_mobility_bw_w6_offset_x.npz  pair_mobility_bw_w6_offset_y.npz  pair_mobility_nbody_freespace.mat  pair_mobility_nbody_freespace.npz  pair_mobility_sc_torque.mat  pair_mobility_sc_w4.mat  pair_mobility_sc_w4.npz  pair_mobility_sc_w4_gpu.mat  pair_mobility_sc_w6_offset_x.npz  pair_mobility_sc_w6_offset_y.npz  readme.txt  self_mobility_bw.mat  self_mobility_bw_ref.mat  self_mobility_bw_ref.npz  self_mobility_bw_ref_noimg.mat  self_mobility_bw_ref_noimg.npz  self_mobility_bw_torque.mat  self_mobility_bw_w4.mat  self_mobility_bw_w4.npz  self_mobility_bw_w4_gpu.mat  self_mobility_bw_w6.npz  self_mobility_sc.mat  self_mobility_sc_ref.mat  self_mobility_sc_torque.mat  self_mobility_sc_w4.mat  self_mobility_sc_w4.npz  self_mobility_sc_w4_gpu.mat  self_mobility_sc_w6.npz
